switch javax to jakarta namespace

--- a/msgraph-impl/pom.xml
+++ b/msgraph-impl/pom.xml
@@ -16,6 +16,7 @@
 		<dependency>
 			<groupId>jakarta.json</groupId>
 			<artifactId>jakarta.json-api</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
