--- a/msgraph-auth-msal4j/pom.xml
+++ b/msgraph-auth-msal4j/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>at.bestsolution.baeso.msgraph</groupId>
 			<artifactId>msgraph-api</artifactId>
-			<version>${revision}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
