--- a/msgraph-sample/pom.xml
+++ b/msgraph-sample/pom.xml
@@ -15,17 +15,17 @@
     <dependency>
       <groupId>at.bestsolution.baeso.msgraph</groupId>
       <artifactId>msgraph-api</artifactId>
-      <version>${revision}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>at.bestsolution.baeso.msgraph</groupId>
       <artifactId>msgraph-impl</artifactId>
-      <version>${revision}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>at.bestsolution.baeso.msgraph</groupId>
       <artifactId>msgraph-auth-msal4j</artifactId>
-      <version>${revision}</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
